--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,19 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "/index.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/index.js" }
+        {
+            "src": "/(.*)",
+            "dest": "/index.js",
+            "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers":{
+                "Access-Control-Allow-Origin": "https://it-company-front.vercel.app/"
+            }
+        }
     ]
-  }
-  
+}
