--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,12 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/api/(.*)",
             "dest": "/index.js",
-            "methods":["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-            "headers":{
-                "Access-Control-Allow-Origin": "https://it-company-front.vercel.app/"
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Credentials": "true"
             }
         }
     ]
